﻿wersja 9.5.1 - 2021-09-03
- naprawiono znikający pasek czasu

wersja 9.5.0 - 2021-09-02
- naprawiono błąd kategorii skórek

wersja 9.4.9 - 2021-09-01
- dodany serwis Polsat GO
- poprawiono wydajność działania

wersja 9.4.8 - 2021-08-22
- poprawka wideoOSD
- usunięte błędy

wersja 9.4.7 - 2021-08-16
- poprawka migotania paska czasu
- poprawka logowania w serwisie WP Pilot

wersja 9.4.6 - 2021-08-10
- poprawka logowania w serwisie WP Pilot
- dodano zapytanie do przewodnika dotyczące ustawień archiwum
- dodano poprawkę funkcji clearEpg

wersja 9.4.5 - 2021-08-03
- poprawka logowania w serwisie WP Pilot
- dodano ustawienie umożliwiające wczytywanie tylko wstępnie zdefiniowanych grup kanałów, zmniejsza czas wczytywania dużych playlist
- poprawka paska postepu czasu

wersja 9.4.4 - 2021-07-31
- poprawka paska postepu czasu
- dodany nowy serwis Telewizja Polska

wersja 9.4.3 - 2021-07-20
- zaktualizowana opcja wybierania klawiszy
- usunięte błędy

wersja 9.4.2 - 2021-07-08
- zaktualizowane menu kontekstowe i menu boczne
- zaktualizowana opcja wybierania skórek

wersja 9.4.1 - 2021-07-06
- zaktualizowano rozpoznawanie kanałów z archiwum

wersja 9.4.0 - 2021-06-27
- naprawiono migotanie paska czasu
- zaktualizowane tłumaczenia

wersja 9.3.9 - 2021-06-21
- dodano ulepszone rozpoznawanie kanałów
- aktualizacja bazy mapowej

wersja 9.3.8 - 2021-06-09
- dodana opcja wykrywania alternatywnych nazw kanałów

wersja 9.3.7 - 2021-06-04
- poprawka odpalenia protokołu .mpd w inputstream helper

wersja 9.3.6 - 2021-06-03
- dodano ikonę nadzoru rodzicielskiego w vosd
- poprawiono wydajność działania
- usunięte błędy

wersja 9.3.5 - 2021-05-31
- zaktualizowany algorytm kategorii programu
- usunięte błędy

wersja 9.3.4 - 2021-05-23
- poprawka działania archiwum

wersja 9.3.3 - 2021-05-22
- optymalizacje
- usunięte błędy

wersja 9.3.2 - 2021-05-19
- poprawka memoryerror przy szybkim parsowaniu epg
- poprawiono wydajność działania
- usunięte błędy

wersja 9.3.1 - 2021-05-12