@@ -32,6 +32,8 @@
 		<email>support@m-tvguide.pl</email>
 	<news>v9.5.1 (2021-09-03)
 - Fixed disappearing timebar.
+- Fixed service WP Pilot.
+- Updated serivce Telia Play.
 
 v9.5.0 (2021-09-02)
 - Fixed skin category error.
